--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noImplicitAny": true,
+    "noImplicitReturns": true
   },
   "include": ["src", "custom.d.ts"]
 }
